feat: add styles

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,16 @@
 @import "tailwindcss";
+
+@layer utilities {
+  .text-shadow-custom {
+    text-shadow: 0 3px 2px rgba(0, 0, 0, 0.6);
+  }
+  .text-shadow-custom-blur {
+    text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.6);
+  }
+
+  .shadow-img {
+    box-shadow: 0px 10px 16px -1px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 10px 16px -1px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 10px 16px -1px rgba(0, 0, 0, 0.75);
+  }
+}
