--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,4 +13,8 @@
     -webkit-box-shadow: 0px 10px 16px -1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 10px 16px -1px rgba(0, 0, 0, 0.75);
   }
+
+  .bg-template {
+    background-color: #0b0b0b;
+  }
 }
